# bi_graph_cluster

./: .gitignore  5  CMakeLists.txt  README.md  clear.sh  make_dir.sh  run.sh  set.sh
DATA/: IMDb_movies_actors.gnd  IMDb_movies_actors.graph  IMDb_movies_actors.ivecs  IMDb_movies_keywords.graph  WebKB4.gnd  WebKB4.graph  WebKB4.ivecs  WebKB_texas.gnd  WebKB_texas.graph  WebKB_texas.ivecs  WebKB_wisconsin.gnd  WebKB_wisconsin.graph  WebKB_wisconsin.ivecs  Yale_32x32.gnd  Yale_32x32.graph  Yale_32x32.ivecs  cora.gnd  cora.graph  cora.ivecs
DATA/actor-movie/: leader.graph
DATA/revolution/: revolution.graph
bench/: co-cluster.py  test_cluster_quality.py
include/: graph.h  nmi.h  utils.h
script/: Cocluster.py  convert_data.py  convert_mat.py  distribution_plot.py  test_cluster_quality.sh  test_data_split.sh  test_dynamic_acc.sh  test_dynamic_time.sh  test_graph_NMI.py  test_graph_modularity.py  test_index_size.py  test_index_time.sh  test_large_graph.sh  test_query_quality.sh  test_query_time.sh  test_single_quality.sh  utils.py  windows_script.py
src/: CMakeLists.txt  dynamic_graph.cpp  graph_cluster.cpp  graph_load.cpp  graph_query.cpp  main.cpp  motifs_count.cpp  test_dynamic_graph.cpp  test_small_graph.cpp  union_set.cpp  utils.cpp
test/: CMakeLists.txt  main.cpp  test_degree_query_quality.cpp  test_dynamic_graph.cpp  test_dynamic_index.cpp  test_dynamic_time.cpp  test_index_time.cpp  test_index_without_join.cpp  test_proj_query_quality.cpp  test_query_quality.cpp  test_query_time.cpp  test_select_parameter.cpp  test_single_quality.cpp  test_small_graph.cpp  test_split_graph.cpp
